--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "Nolan Lawson <nolan@nolanlawson.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "virtual-dom": "^2.1.1"
+    "vdom-as-json": "^1.0.8"
   },
   "devDependencies": {
     "chai": "^3.4.0",
     "jsdom": "^7.0.2",
     "mocha": "^2.3.3",
+    "virtual-dom": "^2.1.1",
     "vdom-to-html": "^2.1.1",
     "zuul": "^3.7.2"
   }
