--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Serialize and apply patches from virtual-dom",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "zuul --phantom --ui mocha-bdd test/test.js"
+  },
   "keywords": [
     "virtual",
     "dom",
@@ -13,13 +15,15 @@
   "author": "Nolan Lawson <nolan@nolanlawson.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "virtual-dom": "^2.1.1"
+    "vdom-as-json": "^1.0.8"
   },
   "devDependencies": {
     "chai": "^3.4.0",
     "jsdom": "^7.0.2",
     "mocha": "^2.3.3",
+    "phantomjs": "^1.9.18",
     "vdom-to-html": "^2.1.1",
+    "virtual-dom": "^2.1.1",
     "zuul": "^3.7.2"
   }
 }
