--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,13 @@ language: node_js
 node_js:
   - "stable"
 script: npm run $COMMAND
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - "sleep 5"
-
-addons:
-  firefox: "41.0.1"
 
 env:
   matrix:
   - COMMAND=test
+  - COMMAND=test-phantom
+  - COMMAND=report-coverage
 
 branches:
   only:
   - master
-  - /^pull*$/
