--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Serialize and apply patches from virtual-dom",
   "main": "index.js",
   "scripts": {
-    "test": "zuul --phantom --ui mocha-bdd test/test.js"
+    "test": "mocha test/test.js",
+    "test-phantom": "zuul --phantom --ui mocha-bdd test/test.js",
+    "test-local": "zuul --port 9000 --local --ui mocha-bdd test/test.js",
+    "coverage": "istanbul cover ./node_modules/.bin/_mocha ./test/test.js && istanbul check-coverage --lines 80 --function 80 --statements 80 --branches 80",
+    "report-coverage": "npm run coverage && istanbul-coveralls"
   },
   "keywords": [
     "virtual",
@@ -19,11 +23,16 @@
   },
   "devDependencies": {
     "chai": "^3.4.0",
-    "jsdom": "^7.0.2",
+    "istanbul": "^0.4.2",
+    "istanbul-coveralls": "^1.0.3",
+    "jsdom": "^7.2.2",
     "mocha": "^2.3.3",
     "phantomjs": "^1.9.18",
     "vdom-to-html": "^2.1.1",
     "virtual-dom": "^2.1.1",
     "zuul": "^3.7.2"
+  },
+  "browser": {
+    "jsdom": false
   }
 }
