--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha test/test.js",
     "test-phantom": "zuul --phantom --ui mocha-bdd test/test.js",
-    "test-local": "zuul --port 9000 --local --ui mocha-bdd test/test.js",
+    "test-local": "zuul --local 9000 --no-coverage --ui mocha-bdd test/test.js",
     "coverage": "istanbul cover ./node_modules/.bin/_mocha ./test/test.js && istanbul check-coverage --lines 80 --function 80 --statements 80 --branches 80",
     "report-coverage": "npm run coverage && istanbul-coveralls"
   },
