--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "Nolan Lawson <nolan@nolanlawson.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "vdom-as-json": "^1.0.8"
+    "vdom-as-json": "1.0.9"
   },
   "devDependencies": {
     "chai": "^3.4.0",
